--- a/assets/style.css
+++ b/assets/style.css
@@ -792,10 +792,10 @@ input::-moz-focus-outer {
   position: relative;
   z-index: 1;
   padding: 35px 35px;
-  border-radius: 4px;
+  border-radius: 10px;
   overflow: hidden;
+  box-shadow: 0 3px 40px 0 rgba(0, 0, 0, 0.1);
   background-color: var(--clr-white);
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.07);
 }
 .feature-box .feature-pic {
   margin-bottom: 2rem;
